# culturelens

./: # Code Citations.md  .dockerignore  .editorconfig  .env.example  .firebaserc  .gitignore  .prettierignore  ADMIN_SDK_CAPABILITIES.md  AGENT_PROMPT.md  AUTHENTICATION_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIREBASE_AUDIT_SUMMARY.md  FIREBASE_OPTIMIZATION_REPORT.md  FIREBASE_SETUP.md  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  storage.rules  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIREBASE_DEPLOY_SETUP.md  SECURITY.md  branch-protection.md  dependabot.yml  labeler.yml  pull_request_template.md
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  voiceagent.tsx
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py  sessions.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  session.py
backend/tests/: __init__.py  test_health.py
components/: backend-status.tsx  command-palette.tsx  voice-agent.tsx
culturelens/: package-lock.json
docs/: ELEVENLABS_SETUP.md  FIREBASE_SETUP.md  GEMINI_INTEGRATION.md  README.md  SESSION_IMPROVEMENTS.md  VOICE_SELECTION.md  VOICE_SETTINGS_CHEATSHEET.md  VOICE_SETUP_QUICKSTART.md  api.md
e2e/: smoke.spec.ts
(+201 files in other folders)
